Implementare splitPayment cu sistem accept, reject; implementarea sa am realizat-o folosind observer pattern; am creat o clasa SplitPayment care contine informatiile despre conturi si suma cat trebuie sa plateasca fiecare, clasa implementeaza interfata PaymentObserver care expune metoda update; in clasa user expun 2 metode, accept si update care apeleaza update din primul splitpayment din coada (acestia au o coada cu split payments)
De asemenea am implementat si builder pattern pentru clasa SplitPayment;
aceasta imi asigura ca nu se creeaza obiectul decat in momentul in care
apelez build (moment in care am adaugat toate datele corespunzatoare
split payment-ului si ma asigur ca toti utilizatorii au balance
cel putin cat trebuie sa plateasca).

Am implementat comenzile accceptSplitPayment si rejectSplitPayment si
am asigurat ca tranzactiile sunt intoarse in ordine crescatoare dupa
timestamp.

Am refactorizat codul pentru a il face mai clar si mai scurt.
Implementare clasa BusinessAccount.
Implementare comanda addNewBusinessAssociate.
Implementare comenzi changeSpendingLimit si changeDepositLimit.

Adaugare exceptie NotAuthorizedException.

Implementare comanda businessReport;

Adaugare transactie noua, Savings withdraw.